--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
     <!-- Facebook -->
     <meta property="og:url" content="https://jackparsonss.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Jack Parsons" />
+    <meta property="og:title" content="Suman Vastrakar" />
     <meta
       property="og:description"
-      content="Welcome to Jack Parsons Portfolio Website."
+      content="Welcome to Suman Vastrakar Portfolio Website."
     />
     <meta
       property="og:image"
@@ -49,7 +49,7 @@
     />
     <meta
       property="og:image:alt"
-      content="Brand logo with 'Jack Parsons Portfolio Website below it'"
+      content="Brand logo with 'Suman Vastrakar Portfolio Website below it'"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
