--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:site_name" content="Jack Parsons" />
+    <meta property="og:site_name" content="Suman Vastrakar" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
