--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo192.png /">
+    <link rel="icon" href="%PUBLIC_URL%/logo1922.png /">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome to Jack Parsons Portfolio Website."
+      content="Welcome to Suman Vastrakar's Portfolio Website."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -58,8 +58,8 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@jackparsonss" />
-    <meta name="twitter:creator" content="@jackparsonss" />
+    <meta name="twitter:site" content="@suman1vastrakar" />
+    <meta name="twitter:creator" content="@suman1vastrakar" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
