--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo1922.png /">
+    <!-- <link rel="icon" href="%PUBLIC_URL%/logo1922.png /"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Welcome to Suman Vastrakar's Portfolio Website."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,8 +27,8 @@
     <title>Suman vastrakar</title>
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@600&family=Oswald:wght@400&family=Roboto&display=swap"
       rel="stylesheet"
@@ -36,21 +36,21 @@
 
     <!-- Social Media Metadata -->
     <!-- Facebook -->
-    <meta property="og:url" content="https://jackparsonss.github.io/" />
+    <!-- <meta property="og:url" content="https://jackparsonss.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Suman Vastrakar" />
+    <meta property="og:title" content="Suman Vastrakar" /> -->
     <meta
       property="og:description"
       content="Welcome to Suman Vastrakar Portfolio Website."
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="%PUBLIC_URL%/images/jack_parsons_og_image.jpg"
-    />
-    <meta
+    /> -->
+    <!-- <meta
       property="og:image:alt"
       content="Brand logo with 'Suman Vastrakar Portfolio Website below it'"
-    />
+    /> -->
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
