--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/logo1922.png /"> -->
+    <link rel="icon" href="%PUBLIC_URL%/logo1922.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Welcome to Suman Vastrakar's Portfolio Website."
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo1922.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Suman vastrakar</title>
+    <title>Suman Vastrakar</title>
 
     <!-- Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@600&family=Oswald:wght@400&family=Roboto&display=swap"
       rel="stylesheet"
@@ -36,9 +36,9 @@
 
     <!-- Social Media Metadata -->
     <!-- Facebook -->
-    <!-- <meta property="og:url" content="https://jackparsonss.github.io/" />
+    <!-- <meta property="og:url" content="https://jackparsonss.github.io/" /> -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Suman Vastrakar" /> -->
+    <meta property="og:title" content="Suman Vastrakar" />
     <meta
       property="og:description"
       content="Welcome to Suman Vastrakar Portfolio Website."
@@ -46,20 +46,20 @@
     <!-- <meta
       property="og:image"
       content="%PUBLIC_URL%/images/jack_parsons_og_image.jpg"
-    /> -->
-    <!-- <meta
+    />
+    <meta
       property="og:image:alt"
       content="Brand logo with 'Suman Vastrakar Portfolio Website below it'"
-    /> -->
+    />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Suman Vastrakar" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
+     Twitter -->
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@suman1vastrakar" />
-    <meta name="twitter:creator" content="@suman1vastrakar" />
+    <meta name="twitter:creator" content="@suman1vastrakar" /> --> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
